--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 alembic==0.8.10
+aniso8601==4.0.1
 appdirs==1.4.0
 blinker==1.3
 click==6.7
+colorama==0.4.1
 Faker==0.7.7
-Flask==0.12
+Flask==1.0.2
 Flask-Assets==0.12
 Flask-Compress==1.4.0
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.3
+Flask-RESTful==0.3.6
 Flask-RQ==0.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
@@ -16,8 +19,9 @@ Flask-SSLify==0.1.5
 Flask-WTF==0.11
 gunicorn==19.6.0
 honcho==0.7.1
+ipaddress==1.0.22
 itsdangerous==0.24
-Jinja2==2.9.5
+Jinja2==2.10
 jsmin==2.2.1
 jsonpickle==0.9.2
 Mako==1.0.6
@@ -27,12 +31,14 @@ psycopg2==2.7
 pyparsing==2.1.10
 python-dateutil==2.6.0
 python-editor==1.0.3
+pytz==2018.7
 raygun4py==3.1.4
 redis==2.10.5
 requests==2.9.1
 rq==0.7.1
 six==1.10.0
+spotipy==2.4.4
 SQLAlchemy==1.1.5
 webassets==0.12.1
-Werkzeug==0.11.15
+Werkzeug==0.14
 WTForms==2.1
