--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==0.8.10
 aniso8601==4.0.1
 appdirs==1.4.0
 blinker==1.3
+certifi==2018.11.29
+chardet==3.0.4
 click==6.7
 colorama==0.4.1
 Faker==0.7.7
@@ -19,6 +21,7 @@ Flask-SSLify==0.1.5
 Flask-WTF==0.11
 gunicorn==19.6.0
 honcho==0.7.1
+idna==2.8
 ipaddress==1.0.22
 itsdangerous==0.24
 Jinja2==2.10
@@ -32,13 +35,13 @@ pyparsing==2.1.10
 python-dateutil==2.6.0
 python-editor==1.0.3
 pytz==2018.7
-raygun4py==3.1.4
 redis==2.10.5
-requests==2.9.1
+requests==2.21.0
 rq==0.7.1
 six==1.10.0
 spotipy==2.4.4
 SQLAlchemy==1.1.5
+urllib3==1.24.1
 webassets==0.12.1
 Werkzeug==0.14
 WTForms==2.1
